# wmmp3play

./: .cvsignore  CREDITS  Imakefile.in  README  config.h.in  configure  configure.in  wmmp3play.c
XPM/: alpnum.xpm  norec.xpm  wmmp3play.xpm
missing/: addrinfo.h  getaddrinfo.c  getnameinfo.c
